# research-kb

./: .env.example  .gitignore  .gitleaksignore  .mcp.json  .mcp.json.example  .mypy_baseline.txt  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.dashboard  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  TROUBLESHOOTING.md  codex-systematic-audit.md  conftest.py  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  validation_tracking.md
.github/workflows/: claude.yml  doc-sync.yml  integration-test.yml  pr-checks.yml  quality.yml  weekly-full-rebuild.yml
docs/: ACQUISITION_WISHLIST.md  CLI.md  DOMAIN_COVERAGE.md  EXTRACTION_QUEUE.md  INDEX.md  INTEGRATION.md  PRE_VALIDATION_TESTING.md  SLO.md  STEP_BY_STEP_VALIDATION_GUIDE.md  STRATEGIC_ASSESSMENT.md  SYSTEM_DESIGN.md  TEST_COVERAGE_AUDIT.md  TRIGGER_VALIDATION_WORKFLOW.md  VALIDATION_QUICK_REFERENCE.md  VALIDATION_QUICK_START.md  WEEK_2_DELIVERABLES.md  tutorial_new_domain.md
docs/archive/: 2025-12-16-codex-parallel-critique.md  2025-12-16-research-kb-critique.md  gemini_audit_report_2026-01-08.md
docs/archive/quality-reports-2025-12-16/: cross_reference.json  cross_reference_report.md  quality-report.md
docs/design/: latency_analysis.md  rrf_validation.md  search_quality_analysis.md
docs/guides/: LEVER_INTEGRATION_TECHNICAL.md  LOCAL_DEVELOPMENT.md
docs/phases/phase2/: KNOWLEDGE_GRAPH.md
docs/phases/phase4/: PRODUCTION.md
docs/plans/archived/: fix-integration_2025-12-29.md  research-kb-audit_2025-12-28.md
docs/scripts/: UTILITIES.md
docs/site/: _config.yml  architecture.md  features.md  getting-started.md  index.md
docs/status/: CURRENT_STATUS.md  MIGRATION_GRAPH_DEFAULT.md  REMEDIATION_LOG.md  VALIDATION_TRACKER.md
fixtures/benchmarks/: domain_filtered.json  full_pipeline.json  graph_latency_2026-02-05.json  no_domain_filter.json  phase4.3_validation.json  rrf_vs_weighted.json  scoring_domain_fixed_2026-02-19.json  scoring_expanded_2026-02-19.json  scoring_post_cleanup_2026-02-19.json  scoring_post_dedup_2026-02-19.json  with_reranker.json
fixtures/concepts/: synonym_map.yaml
fixtures/demo/data/: chunk_concepts.json  chunks.json  citations.json  concepts.json  manifest.json  sources.json
fixtures/eval/: baseline_metrics.json  golden_assumptions.json  golden_candidates_2026-02-19.json  golden_candidates_2026-02-20.json  golden_dataset.json  phase3_comparison.json  phase3_results.json  retrieval_test_cases.yaml
monitoring/: docker-compose.monitoring.yml
monitoring/grafana/dashboards/: research-kb-daemon.json  research_kb.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
monitoring/prometheus/: alerts.yml  prometheus.yml
scripts/: README.md  ab_test_embeddings.py  add_missing_domains.py  audit_docs.py  backfill_concept_embeddings.py  benchmark_backends.py  benchmark_graph_latency.py  build_citation_graph.py  build_golden_dataset.py  build_llama_cpp_cuda.sh  check_domains.py  compare_haiku_models.py  compare_search_configs.py  compute_bibliographic_coupling.py  configure_ollama_perf.sh  cross_reference_available.py  dedup_chunks.py  deduplicate_concepts.py  deduplicate_concepts_v2.py  diagnose_data_quality.py  diagnose_orphans.py  discover_cross_domain_links.py  discover_golden_candidates.py  download_demo_corpus.sh  embed_missing.py  enrich_method_attributes.py  eval_assumptions.py  eval_interview_readiness.py  eval_phase3.py  eval_retrieval.py  eval_scoring_methods.py  export_demo_data.py  extract_citations.py  extract_concepts.py  extract_top10.sh  fix_sidecar_domains.py  generate_golden_dataset.py  generate_package_docs.py  generate_readme_sections.py  generate_status.py  (+36 more)
scripts/archive/: ab_test_embeddings.py  backfill_concept_embeddings.py  compare_haiku_models.py  compare_search_configs.py  cross_reference_available.py  download_gguf_model.sh  eval_phase3.py  extract_top10.sh  ingest_golden_pdfs.py  ingest_ml_interviews_book.py  master_plan_validation.py  register_interview_prep_domain.py  validate_gold_eval.py  validate_proactive_context.py
scripts/manning/: __init__.py  __main__.py  audit.py  catalog.py  cleanup.py  dedup.py  ingest.py
scripts/systemd/: research-kb-reranker.service  research-kb-sync.service  research-kb-sync.timer
services/: research-kb-daemon.service  s2-discovery.service  s2-discovery.timer
services/research_kb_daemon/: __init__.py  daemon.py  health_server.py  metrics.py  research_kb_daemon.service  test_daemon.py
skills/assumption-tracking/: SKILL.md
skills/research-context-retrieval/: SKILL.md
tests/e2e/: conftest.py  test_ingestion_pipeline.py
tests/integration/: conftest.py  test_ingestion_resilience.py  test_search_pipeline.py  test_seed_concept_validation.py
tests/load/: README.md  __init__.py  locustfile.py
tests/quality/: conftest.py  test_extraction_metrics.py
tests/scripts/: conftest.py  test_critical_scripts.py  test_ingestion_scripts.py  test_validation_scripts.py
tests/smoke/: conftest.py  test_ingestion_quality.py
