[tool.poetry]
name = "research-kb"
version = "1.0.0"
description = "Research Knowledge Base - Personal RAG system for textbooks, papers, and code"
authors = ["Brandon Behring <$USER@example.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^24.0.0"
ruff = "^0.1.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Poetry workspace configuration
# Packages are managed independently in packages/* subdirectories
# Install all packages: poetry install
# Install with specific groups: poetry install --with dev

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages/*/tests", "tests"]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (multi-component)",
    "e2e: End-to-end tests (full pipeline, real database)",
    "slow: Slow tests (may take >10s)",
    "requires_reranker: Tests that require the reranker service",
    "requires_ollama: Tests that require Ollama running",
]
