[project]
name = "research-kb"
version = "1.0.0"
description = "Graph-boosted semantic search for research literature"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["packages", "tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--import-mode=importlib"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
log_cli = false
log_cli_level = "INFO"
filterwarnings = [
    "ignore:coroutine .* was never awaited:RuntimeWarning",
    "ignore::DeprecationWarning",
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (multiple components)",
    "e2e: End-to-end tests (full pipeline)",
    "smoke: Smoke tests (real PDFs, quality checks)",
    "quality: Quality metric validation tests",
    "scripts: Script validation tests",
    "slow: Slow-running tests (>5 seconds)",
    "requires_ollama: Tests requiring Ollama server",
    "requires_grobid: Tests requiring GROBID server",
    "requires_embedding: Tests requiring embedding server",
    "requires_reranker: Tests requiring cross-encoder reranker model",
    "requires_anthropic: Tests requiring Anthropic API client (anthropic package)",
    "requires_instructor: Tests requiring Instructor client (instructor package)",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "respx>=0.21",
    "httpx>=0.27",
    "black>=24.0",
    "ruff>=0.3",
    "research-kb-extraction[anthropic,instructor]",
]

[tool.uv.sources]
research-kb-extraction = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
ignore = [
    "E402",  # Module-level import not at top (needed for sys.path manipulation in tests)
    "E741",  # Ambiguous variable name (l, I, O) — pre-existing, low risk
    "F841",  # Local variable assigned but never used (common in mock context managers)
]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["F401", "F541"]  # Scripts may have conditional imports / f-string formatting

[tool.coverage.run]
source = ["packages"]
omit = [
    "*/tests/*",
    "*/conftest.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
]
show_missing = true
precision = 1

[tool.black]
line-length = 100
target-version = ["py311"]
